# DDImageLib

./: .gitignore  CMakeLists.txt  FilterTests  HarrisTest  ProcessTests  ResizeTests  VideoStabilizer  make_video.sh
src/colourspace/: colourspaces.cpp  colourspaces.h
src/feature_detection/: SIFT.h  canny_edge_detector.h  feature_detector_types.h  harris_detector.cpp  harris_detector.h
src/image/inc/: filter_image.h  image.h
src/image/src/: filter_image.cpp  image.cpp  load_image.cpp  process_image.cpp  resize_image.cpp
src/matrix/: matrix.cpp  matrix.h
src/optical_flow/: optical_flow.cpp  optical_flow.h
src/panorama/: panorama.cpp  panorama.h
src/utils/: utils.cpp  utils.h
src/video/: video.cpp  video.h  video_stabilizer.cpp
test/: test_common.h  test_filter_image.cpp  test_harris.cpp  test_process_image.cpp  test_resize_image.cpp
